[package]
name = "newsfeed"
version = "0.1.0"
edition = "2021"
license = "MIT"


[dependencies]
regex = "1.10.5"
reqwest = "0.12.5"
scraper = "0.19.0"
serde = "1.0.203"
serde_json = "1.0.118"
tokio = { version = "1.38.0", features = ["full", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = { version = "2.5.2", features = ["serde"] }
uuid = { version = "1.9.1", features = ["v4"] }
rdkafka = "0.36.2"
